--- a/frontend/Admin-HotelCocoMilk/package.json
+++ b/frontend/Admin-HotelCocoMilk/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/node": "^20.2.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "rxjs": "~7.8.0",
