--- a/frontend/Admin-HotelCocoMilk/package.json
+++ b/frontend/Admin-HotelCocoMilk/package.json
@@ -18,7 +18,6 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@types/node": "^20.2.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "rxjs": "~7.8.0",
@@ -31,12 +30,20 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "@types/node": "^20.2.5",
+    "add": "^2.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "yarn": "^1.22.19"
+  }, 
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
