--- a/frontend/Admin-HotelCocoMilk/tsconfig.app.json
+++ b/frontend/Admin-HotelCocoMilk/tsconfig.app.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["jquery"]
+    "types": ["node", "jquery"]
   },
   "files": [
     "src/main.ts"
